# TableCV

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  bandit.yaml  pyproject.toml  pytest.ini  tox.ini
.cursor/rules/: agents.mdc  project.mdc  python.mdc  quality.mdc
.cursor/skills/quality-gate/: SKILL.md
.cursor/skills/review/: SKILL.md
.cursor/skills/work-on/: SKILL.md
.github/workflows/: ci.yml  python-publish.yml
docs/: test_coverage.md
requirements/: base.txt
tablecv/: __init__.py  extract_table.py  types.py
tablecv/tests/: test_basic.py
tablecv/utils/: bounding_box.py  box_geometry.py  cell_assignment.py  row_detection.py  table_extraction.py  table_region.py
tests/: test_extract_table.py  test_table_extraction.py
tests/fixtures/images/kirana/: README.md
