[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tablecv"
version = "0.2.2"
description = "Extract table-shaped data from OCR text boxes."
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Vishal Kumar Mishra", email = "vishal.k.mishra2@gmail.com" },
]
keywords = [
  "computer-vision",
  "ocr",
  "opencv",
  "pandas",
  "python",
  "table-extraction",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pandas>=2.2.0",
  "shapely>=2.0.0",
]

[project.optional-dependencies]
paddle = [
  "paddleocr>=3.0.0",
  "paddlepaddle>=3.3.1",
]

[project.urls]
Homepage = "https://github.com/inquilabee/TableCV"
Repository = "https://github.com/inquilabee/TableCV"
Issues = "https://github.com/inquilabee/TableCV/issues"
Changelog = "https://github.com/inquilabee/TableCV/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "codespell>=2.4.2",
  "mdformat>=0.7.22",
  "mypy>=1.18.0",
  "pre-commit>=4.6.0",
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
  "radon>=6.0.1",
  "ruff>=0.11.13,<0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tablecv*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = [
  "-m",
  "not integration",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
]
markers = [
  "integration: tests that require OCR engines, model downloads, image fixtures, or external binaries",
]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["B", "C4", "C901", "E", "F", "I", "UP"]
ignore = [
  "E501", # line length is enforced by formatter where practical
]

[tool.ruff.lint.isort]
known-first-party = ["tablecv"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.bandit]
exclude_dirs = [".venv", "build", "dist", "tests"]
skips = [
  "B101", # asserts document extraction invariants in tests
  "B113", # retained for compatibility with tools that may inspect requests-like patterns
]

[tool.codespell]
skip = "*.lock,uv.lock,.venv,build,dist,notes"

[tool.coverage.run]
branch = true
source = ["tablecv"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
precision = 1
show_missing = true
